name:                stormy-pond
version:             0.1.0.0
synopsis:            A personal task manager.
-- description:
homepage:            https://github.com/tyler-sommer/stormy-pond
license:             MIT
license-file:        LICENSE
author:              Tyler Sommer
maintainer:          sommertm@gmail.com
copyright:           2017 Tyler Sommer
category:            CLI
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Pond.Data
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
  default-language:    Haskell2010

executable pond
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , stormy-pond
                     , aeson
                     , bytestring
  default-language:    Haskell2010

test-suite stormy-pond-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , stormy-pond
                     , aeson
                     , bytestring
                     , HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tyler-sommer/stormy-pond
